# DIT632_exercises

./: CMakeLists.txt  ex_1.c  ex_10.c  ex_11.c  ex_12.c  ex_13.ino  ex_14.ino  ex_15.c  ex_16.c  ex_17.c  ex_2.c  ex_3.c  ex_4.c  ex_5.c  ex_6.c  ex_7.c  ex_8.c  ex_9.c
