cmake_minimum_required(VERSION 3.21)
project(exam_preparation C)

set(CMAKE_C_STANDARD 99)

add_executable(example_1 ex_1.c)
add_executable(example_2 ex_2.c)
add_executable(example_3 ex_3.c)
add_executable(example_4 ex_4.c)
add_executable(example_5 ex_5.c)
add_executable(example_6 ex_6.c)
add_executable(example_7 ex_7.c)
add_executable(example_8 ex_8.c)
add_executable(example_9 ex_9.c)
add_executable(example_10 ex_10.c)
add_executable(example_11 ex_11.c)
add_executable(example_12 ex_12.c)
add_executable(example_15 ex_15.c)
add_executable(example_16 ex_16.c)
add_executable(example_17 ex_17.c)

